--- a/style.css
+++ b/style.css
@@ -43,14 +43,15 @@
   display: flex;
   padding: 7.125rem 1.5rem;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 12px;
+  text-align: start;
+  gap: 0.75rem;
   width: 100%;
+  height: 604px;
 }
 
 .greeting {
   color: #172b4d;
-  font-size: 40px;
+  font-size: 2.5rem;
   font-style: normal;
   font-weight: 700;
   line-height: 3.25rem;
@@ -93,12 +94,12 @@
   align-content: space-between;
   justify-content: space-around;
   background-color: #f7f7ff;
+  width: 100%;
 }
 
 .work-card {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   padding: 1rem;
   border-radius: 1rem;
   border: 1px solid #e5e5e5;
@@ -369,20 +370,114 @@ form button {
   margin-top: 10px;
 }
 
-/* mobile-section finish and below are for desktop between 375px and 768px */
+/* mobile-section finish and below are for desktop 768px */
 
-@media (min-width: 375px) and (max-width: 768px) {
+@media screen and (min-width: 768px) {
+
   .nav-links-container {
-    color: #344563;
-    width: 3.875rem;
-    height: 1.25rem;
+    display: flex;
+    width: 16.125rem;
+    height: 2.5rem;
+    gap: 0.5rem;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .nav-links {
     font-size: 0.9375rem;
     font-style: normal;
     font-weight: 500;
     line-height: 1.25rem;
+    color: #344563;
+    text-decoration: none;
   }
 
   .Hamburger-menu {
     display: none;
+  }
+
+  .hero {
+    padding-left: 16.25rem;
+padding-right: 16.25rem;
+  }
+
+  .work-card {
+    flex-direction: row;
+    justify-content: space-between;
+    display: flex;
+    padding: 1rem;
+    border-radius: 1rem;
+    border: 1px solid #e5e5e5;
+    background-color: #fff;
+    gap: 0.75rem;
+    flex-shrink: 2;
+  }
+
+  .work-card-reverse {
+    flex-direction: row-reverse;
+  }
+
+  .work-card-details {
+    padding: 1.5rem;
+    gap: 1.5rem;
+    width: 50%;
+  }
+
+  .work-section {
+    grid: 8.8rem;
+  }
+
+  .snapshoot-portfolio {
+    width: 50%;
+    height: 100%;
+    flex-shrink: 0;
+  }
+
+  .about-me-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* align-items: flex-start; */
+    padding: 9rem;
+    gap: 1.5rem;
+  }
+
+  .language-card {
+    width: 42.75rem;
+    height: 22.5rem;
+  }
+
+  .about-me-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 1rem;
+  }
+
+  .languages,
+  .frameworks,
+  .skills {
+    width: 100%;
+    height: auto;
+  }
+
+  .language-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding: 0.75rem;
+    align-items: center;
+    gap: 0.75rem;
+    width: 26rem;
+  }
+
+  .js-section,
+  .html-section,
+  .css-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
   }
 }
