--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 body {
   overflow-x: hidden;
+  background-color: #f7f7ff;
 }
 
 .top-nav {
@@ -17,6 +18,7 @@ body {
   height: 48px;
   padding: 4px 24px 4px 12px;
   justify-content: space-between;
+  background-color: #fff;
 }
 
 .logo {
@@ -46,16 +48,16 @@ body {
 }
 
 .hero {
-  background-image: url(./images/Header\ bg@2x.png);
-  background-repeat: no-repeat;
+  background-color: #fff;
+  background-image: url(./images/background-shapes.png);
   background-size: cover;
   display: flex;
-  padding: 20% 10%;
+  gap: 0.75rem;
+  padding: 35% 7%;
   flex-direction: column;
   text-align: start;
-  gap: 0.75rem;
   width: 100%;
-  height: auto;
+  border-bottom-left-radius: 5rem;
 }
 
 .greeting {
@@ -143,7 +145,6 @@ body {
 
 .snapshoot-portfolio {
   border-radius: 8px;
-  /* width: 18.438rem; */
   height: 13.75rem;
   object-fit: cover;
   transition: all 0.6s ease;
@@ -153,6 +154,7 @@ body {
   transform: scale(1.02);
 }
 
+/* about me section */
 .title {
   color: #172b4d;
   font-size: 2rem;
@@ -217,12 +219,14 @@ body {
 }
 
 .about-me-section {
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   padding: 114px 24px;
   gap: 1.5rem;
+  border-top-right-radius: 5rem;
 }
 
 .about-me-card {
@@ -299,7 +303,16 @@ body {
   color: #253858;
 }
 
+/* Form */
+
+.contact-form {
+  background-color: #fff;
+}
+
 form {
+  background-image: url(./images/contact\ form\ shapes-mobile.png);
+  background-position-x: right;
+  background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -307,6 +320,7 @@ form {
   height: 48.6875rem;
   background-color: #6070ff;
   gap: 8px;
+  border-top-left-radius: 5rem;
 }
 
 form h1 {
@@ -326,13 +340,11 @@ form h1 {
 
 .contact-text {
   color: #ebebff;
-  font-size: 1.25rem;
+  width: 21rem;
+  font-size: 1.1rem;
   font-style: normal;
   font-weight: 400;
   line-height: 1.75rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  margin: 0.5rem;
   text-align: center;
 }
 
@@ -412,7 +424,14 @@ form button {
   }
 
   .hero {
-    padding: 10% 20%;
+    background-image: url(./images/Header\ bg@2x.png);
+    background-size: cover;
+    background-color: #fff;
+    border-bottom-left-radius: 10rem;
+    gap: 0.75rem;
+    padding: 18% 26%; 
+    width: 100%;
+    height: auto;
   }
 
   .work-card {
@@ -448,10 +467,11 @@ form button {
   }
 
   .about-me-section {
+    background-color: #fff;
+    border-top-right-radius: 10rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /* align-items: flex-start; */
     padding: 10% 15%;
     gap: 1.5rem;
   }
@@ -494,5 +514,10 @@ form button {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+  }
+
+  form {
+    background-image: url(./images/contact\ form\ background\ shapes.png);
+    background-size: cover;
   }
 }
