--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ body {
 
 /* Form */
 
-.contact-form {
+.form-section {
   background-color: #fff;
 }
 
@@ -517,5 +517,9 @@ form button {
   form {
     background-image: url(./images/contact\ form\ background\ shapes.png);
     background-size: cover;
+  }
+
+  .form-section {
+    background-color: #fff;
   }
 }
