--- a/style.css
+++ b/style.css
@@ -7,18 +7,24 @@
   font-family: "Poppins", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   overflow-x: hidden;
   background-color: #f7f7ff;
 }
 
 .top-nav {
+  position: fixed;
   display: flex;
   width: 100%;
   height: 48px;
   padding: 4px 24px 4px 12px;
   justify-content: space-between;
   background-color: #fff;
+  z-index: 100;
 }
 
 .logo {
@@ -393,6 +399,58 @@ form button {
   line-height: 24px;
   letter-spacing: 0.51px;
   margin-top: 10px;
+}
+
+/* mobile-menu */
+
+.mobile-menu {
+  background: hsla(234, 100%, 69%, 0.9);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  z-index: 200;
+}
+
+.x-btn {
+  display: flex;
+  width: 100vw;
+  height: 3rem;
+  padding: 0.25rem 1.5rem 0.25rem 19.4375rem;
+  justify-content: flex-end;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+.x-btn a {
+  width: 1.5rem;
+  height: 1.5rem;
+  border: none;
+  padding: 0.5rem;
+  margin-right: 1.5rem;
+}
+
+.menu-lists {
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+.menu-lists a {
+  width: 21.9375rem;
+  height: 3.5rem;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 2.75rem;
+  color: #fff;
+  margin-left: 1.75rem;
+}
+
+.hidden {
+  display: none;
 }
 
 /* mobile-section finish and below are for desktop 768px */
