--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body {
 }
 
 .top-nav {
-  position: fixed;
+  position: sticky;
+  top: 0;
   display: flex;
   width: 100%;
   height: 48px;
@@ -465,13 +466,19 @@ form button {
     align-items: center;
   }
 
-  .nav-links {
+  .nav-links-container a {
     font-size: 0.9375rem;
     font-style: normal;
     font-weight: 500;
     line-height: 1.25rem;
     color: #344563;
     text-decoration: none;
+    
+  }
+
+  .nav-links-container a.active {
+    border-bottom: 3px solid black;
+    transition: border-bottom 0.1s ease;
   }
 
   .Hamburger-menu {
