--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ body {
 
 .button:hover {
   background-color: #396df2;
+  box-shadow: 0px 8px 16px 0px rgba(64, 83, 252, 0.24);
   color: #fff;
 }
 
@@ -452,6 +453,57 @@ form button {
 
 .hidden {
   display: none;
+}
+
+/* popup window */
+
+.popupWindow1,
+.popupWindow2,
+.popupWindow3,
+.popupWindow4 {
+  background: hsla(212, 16%, 48%, 0.5);
+  width: 100vw;
+  height: 100vh;
+  padding: 1rem;
+  position: fixed;
+  top: 0;
+  z-index: 300;
+  overflow: auto;
+}
+
+.popupWindowContainer {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 1px solid #e5e5e5;
+  background: #fff;
+  gap: 0.75rem;
+  z-index: 400;
+}
+
+.popupTop {
+  display: flex;
+  justify-content: space-between;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.liveBtn {
+  display: flex;
+  padding: 0.75rem 1.375rem;
+  align-items: center;
+  gap: 0.625rem;
+}
+
+.sourceBtn {
+  display: flex;
+  padding: 0.75rem 0.875rem;
+  align-items: center;
+  gap: 0.625rem;
 }
 
 /* mobile-section finish and below are for desktop 768px */
