--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body {
 
 .button:hover {
   background-color: #396df2;
-  box-shadow: 0px 8px 16px 0px rgba(64, 83, 252, 0.24);
+  box-shadow: 0 8px 16px 0 rgba(64, 83, 252, 0.24);
   color: #fff;
 }
 
@@ -409,6 +409,7 @@ form button {
   padding: 0.5rem 0.5rem;
   border-radius: 8px;
 }
+
 /* mobile-menu */
 
 .mobile-menu {
@@ -695,7 +696,6 @@ form button {
   .popupfooter {
     display: flex;
     margin-top: 1.5rem;
-
   }
 
   .popupfooter p {
@@ -704,7 +704,6 @@ form button {
     font-style: normal;
     font-weight: 400;
     line-height: 1.875rem;
-
   }
 
   .right-box {
@@ -718,7 +717,7 @@ form button {
     display: flex;
     width: 19.125rem;
     height: 1.0625rem;
-    padding: 0rem 0.25rem;
+    padding: 0 0.25rem;
     justify-content: center;
     align-items: center;
   }
