--- a/style.css
+++ b/style.css
@@ -464,10 +464,7 @@ form button {
 
 /* popup window */
 
-.popupWindow1,
-.popupWindow2,
-.popupWindow3,
-.popupWindow4 {
+.popupWindow {
   background: hsla(212, 16%, 48%, 0.5);
   width: 100vw;
   height: 100vh;
@@ -489,10 +486,7 @@ form button {
   z-index: 400;
 }
 
-.popupImage1 img,
-.popupImage2 img,
-.popupImage3 img,
-.popupImage4 img {
+.popupImage1 img{
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -656,10 +650,7 @@ form button {
     background-color: #fff;
   }
 
-  .popupWindow1,
-  .popupWindow2,
-  .popupWindow3,
-  .popupWindow4 {
+  .popupWindow {
     background: hsla(212, 16%, 48%, 0.9);
     width: 100vw;
     height: 100vh;
@@ -674,20 +665,14 @@ form button {
     padding: 1.5rem;
   }
 
-  .popupImage1,
-  .popupImage2,
-  .popupImage3,
-  .popupImage4 {
+  .popupImage1 {
     position: relative;
     width: 100%;
     height: 36.625rem;
     border-radius: 8px;
   }
 
-  .popupImage1 img,
-  .popupImage2 img,
-  .popupImage3 img,
-  .popupImage4 img {
+  .popupImage1 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
